# Decision-Intelligence-System

./: .dockerignore  .env.example  .gitattributes  .gitignore  BUSINESS_PACK_CHANGES.md  Dockerfile  FIXES_APPLIED.md  Makefile  README.md  docker-compose.yml  prompt.md  pyproject.toml  requirements-dev.txt  requirements.txt  scripts_drift_check.py  scripts_generate_business_pack.py
.dvc/: config
.github/workflows/: ci.yml
agents/: README_AGENT_INTEGRATION.md  agent_api_example.py  agent_guardrails.py  agent_orchestrator.py  agent_tools.py  agent_types.py
analytics_sql/: analytics.duckdb  anomaly_detection.py  build_warehouse.py  load_duckdb.py  schema.sql
analytics_sql/queries/: 01_top_stores_by_uplift.sql  02_top_items_price_increase.sql  03_categories_with_negative_uplift.sql  04_kpis_latest.sql  05_store_uplift_distribution.sql  06_executive_kpis.sql  07_reason_code_mix.sql  08_execution_readiness.sql  (+12 more)
api/: datasets.py  job_routes.py  job_schemas.py  main.py  schemas.py  security.py  services.py  settings.py
dashboards/: streamlit_app.py
data/: calendar.csv.dvc  sales_train_validation.csv.dvc  sample_submission.csv.dvc  sell_prices.csv.dvc
docs/: sql_analytics_case_study.md
m5_pipeline/: ab_testing.py  business_outputs.py  m5_forecasting.py  m5_price_optimization.py  m5_promo_selection.py  pipeline.py  utils.py  validation.py
monitoring/: metrics.py
tests/: test_ab_simulation.py  test_analytics_warehouse.py  test_anomaly_detection.py  test_api_security_jobs.py  test_api_smoke.py  test_business_outputs.py  test_experiment_support.py  test_forecasting_hardening.py  test_metric_compatibility.py  test_promo_selection_milp.py
worker/: __init__.py  celery_app.py  tasks.py
(+7 files in other folders)
