[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m5-forecast-price-service"
version = "0.2.0"
description = "Production-style M5 forecasting + price optimisation + promo selection service (FastAPI)"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "pandas>=2.1,<3.0",
    "numpy>=1.24,<2.0",
    "scikit-learn>=1.3,<2.0",
    "joblib>=1.3,<2.0",
    "lightgbm>=4.0,<5.0",
    "prometheus-client>=0.20,<1.0",
    "python-dotenv>=1.0,<2.0",
    "PuLP>=2.8,<3.0",
    "orjson>=3.10,<4.0",
    "duckdb>=1.0.0,<2.0",
    "celery>=5.3,<6.0",
    "redis>=5.0,<6.0",
    "streamlit>=1.32,<2.0",
    "matplotlib>=3.8,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.4,<1.0",
    "black>=24.1,<25.0",
    "mypy>=1.8,<2.0",
]

[tool.setuptools]
packages = ["api", "m5_pipeline", "monitoring", "agents", "analytics_sql", "worker"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
